--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
