--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-spinners": "^0.13.8",
     "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.11"
   },
