--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^5.14.6",
     "bootstrap": "^5.3.1",
     "generate-password": "^1.7.0",
+    "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
