--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.11"
   },
